--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -31,7 +31,7 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.StudentId }) |
             @Html.ActionLink("Details", "Details", new { id=item.StudentId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.StudentId },new { onclick = "return confirm('Are you sure?');" })
+            @Html.ActionLink("Delete", "Delete", new { id=item.StudentId })
         </td>
     </tr>
 }
