Edit Delete Function

--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -29,8 +29,10 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.StudentId)
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
