Apply Validation on Student Edit screen

--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -27,6 +27,20 @@
             @Html.DisplayFor(model => model.Age)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.PhoneNumber)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PhoneNumber)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.EmailAddress)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EmailAddress)
+        </dd>
     </dl>
 
     @using (Html.BeginForm())
