--- a/Views/Student/Details.cshtml
+++ b/Views/Student/Details.cshtml
@@ -25,6 +25,20 @@
         <dd>
             @Html.DisplayFor(model => model.Age)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.PhoneNumber)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PhoneNumber)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.EmailAddress)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EmailAddress)
+        </dd>
 
     </dl>
 </div>
