Validation Edit Form

--- a/Views/Student/Details.cshtml
+++ b/Views/Student/Details.cshtml
@@ -26,18 +26,18 @@
             @Html.DisplayFor(model => model.Age)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            @Html.DisplayNameFor(model => model.MobileNumber)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PhoneNumber)
+            @Html.DisplayFor(model => model.MobileNumber)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.EmailAddress)
+            @Html.DisplayNameFor(model => model.StudentEmail)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.EmailAddress)
+            @Html.DisplayFor(model => model.StudentEmail)
         </dd>
 
     </dl>
