--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayNameFor(model => model.Age)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            @Html.DisplayNameFor(model => model.MobileNumber)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.EmailAddress)
+            @Html.DisplayNameFor(model => model.StudentEmail)
         </th>
         <th></th>
     </tr>
@@ -35,10 +35,10 @@
         @Html.DisplayFor(modelItem => item.Age)
     </td>
     <td>
-        @Html.DisplayFor(modelItem => item.PhoneNumber)
+        @Html.DisplayFor(modelItem => item.MobileNumber)
     </td>
     <td>
-        @Html.DisplayFor(modelItem => item.EmailAddress)
+        @Html.DisplayFor(modelItem => item.StudentEmail)
     </td>
     <td>
         @Html.ActionLink("Edit", "Edit", new { id = item.StudentId }) |
